<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>ApiLastHomework</artifactId>
    <version>1.0-SNAPSHOT</version>


    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.29.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>7.19.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>7.19.0</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>5.3.0</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
        <artifactId>allure-testng</artifactId>
        <version>2.29.0</version>

    </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- The Surefire plugin is used to run tests in parallel with the specified settings. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
<!--                    &lt;!&ndash; Specifies that tests should run in parallel at the method level &ndash;&gt;-->
<!--                    <parallel>methods</parallel>-->
<!--                    &lt;!&ndash; Defines that a new JVM should be forked for each thread &ndash;&gt;-->
<!--                    <forkCount>1</forkCount>-->
<!--                    &lt;!&ndash; Sets the number of threads to 3 &ndash;&gt;-->
<!--                    <threadCount>3</threadCount>-->
<!--                    &lt;!&ndash; Specifies not to reuse JVM forks &ndash;&gt;-->
<!--                    <reuseForks>false</reuseForks>-->
                    <!-- Passes system properties to the JVM -->
                    <argLine>-Duser.language=en</argLine> <!-- Sets the user language to English -->
                    <argLine>-Xmx1024m</argLine> <!-- Sets the maximum heap size to 1024 MB -->
                    <!-- Sets the maximum permanent generation space to 256 MB -->
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine> <!-- Sets the file encoding to UTF-8 -->
                    <!-- Specifies not to use a file to store test results -->
                    <useFile>false</useFile>
                    <!-- Specifies which test classes to include in the test run -->
                    <includes>
                        <!-- Specifies the Runner class that will be executed -->
                        <include>runners.Runner.java</include>
                    </includes>
                    <!-- Ignores test failures -->
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>